Closed Bug 335979 Opened 19 years ago Closed 15 years ago

Get Info on history item displays no info (disable menu item again when in History view)

Categories

(Camino Graveyard :: History, defect)

All
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: samuel.sidler+old, Assigned: bugzilla-graveyard)

References

Details

(Keywords: regression, Whiteboard: [camino-2.0][good first bug])

Attachments

(1 file, 1 obsolete file)

917 bytes, patch
stuart.morgan+bugzilla
: superreview+
Details | Diff | Splinter Review
STR: 1. cmd-Y 2. Click on a history item 3. Edit->Get Info In 0.8.x, no window came up, but in 1.0.1RC, a window appears with no information. We should be showing information there. I'm not sure if this is a regression, or if getting info on a history item just never worked.
Let me clarify further... In 0.8.x: 1. The menu item is enabled 2. Selecting it does nothing In 1.0.x: 1. The menu item is enabled 2. Selecting it brings up the "bookmark info" window, which is blank. Three things to look for: 1) When we enabled the menu item (since it was disabled in 0.7), 2) When we started showing the bookmark info window, and 3) Was the bookmark info window always blank.
Version: 1.8 Branch → unspecified
The bookmark info window has always been blank. We started showing it between 2005-12-04 and 2005-12-05 on branch and between 2005-12-1 and 2005-12-2 on trunk, both of which are the day that Page Info was checked in. Per IRC, what we should probably do is just disable the menu item again, the way it always used to be.
Keywords: regression
Since this is a regression, I'd like it to be considered for 1.0.2.
Flags: camino1.0.2?
Summary: Get Info on history item broken → Get Info on history item displays no info (disable menu item again when in History view)
Chris, can you look into this; how difficult is it to disable that menu item just when History is showing? Minusing for 1.0.2, but *if* this turns out to be redonkulously simple and we have a fix we can test and review before 1.0.2 checkins start, we can re-evaluate for 1.0.2.
Flags: camino1.0.3?
Flags: camino1.0.2?
Flags: camino1.0.2-
Whiteboard: [good first bug]
Just for reference, this also surfaces in a somewhat uglier fashion. STR: 1. Cmd-B 2. Get info on a bookmark 3. Click on the history collection 4. Get info on a history item In this case, the info window (instead of being blank) displays the info for the bookmark you got info on.
Blocks: 341853
Assignee: nobody → stridey
Attached patch Patch (obsolete) — Splinter Review
Attachment #226843 - Flags: review?(bugzilla)
Status: NEW → ASSIGNED
Comment on attachment 226843 [details] [diff] [review] Patch This patch doesn't look like it'll do the right thing if the bookmarks manager is invoked first, then history is brought up. We shouldn't be checking the URI (at least not until bug 318931 is fixed, and even when that's fixed, it'd probably be better to use a helper method since we have several places we'll need to check this). cl
Attachment #226843 - Flags: review?(bugzilla) → review-
Depends on: 318931
Missed 1.0.3, but we can try again for 1.0.4 if there's a patch with a positive review.
Flags: camino1.0.4?
Flags: camino1.0.3?
Flags: camino1.0.3-
Target Milestone: Camino1.1 → Camino1.2
Minusing for 1.0.4 because we've determined there's no way that the bug it depends on is getting fixed before Camino 1.2.
Flags: camino1.0.4? → camino1.0.4-
Target Milestone: Camino1.6 → ---
Ian, do you care if I steal this for 1.6?
Assignee: froodian → cl-bugs
Status: ASSIGNED → NEW
Target Milestone: --- → Camino1.6
Mass un-setting milestone per 1.6 roadmap. Filter on RemoveRedonkulousBuglist to remove bugspam. Developers: if you have a patch in hand for one of these bugs, you may pull the bug back to 1.6 *at that point*.
Target Milestone: Camino1.6 → ---
Not a [good first bug] due to its nasty dependency, and I'm not working on this.
Assignee: cl-bugs-new → nobody
Whiteboard: [good first bug]
Having a look a 1.6.8, I saw that the menu item has been disabled, though it is still possible to open the info window through cmd-I
We know if the HistoryOutlineView is showing (regardless of the URL), right, and/or if the selected item is a child of said view, and we ought to be able to check that, no? Of course, just disabling the menu item won't help at all if the Info window is already open and you switch to History, so ultimately we need to just hook it up.
Hardware: PowerPC → All
Attached patch fix v1.0Splinter Review
Turns out this actually was a [good first bug] and redonkulously simple -- we were just looking in the wrong place :-p This patch has verbal r=smokey on IRC.
Assignee: nobody → cl-bugs-new
Attachment #226843 - Attachment is obsolete: true
Status: NEW → ASSIGNED
Attachment #405609 - Flags: superreview?(stuart.morgan+bugzilla)
Smokey pointed out on IRC that there are some other weird issues with selection memory in the bookmark manager vis-a-vis the Info window. This patch at least doesn't make those issues any worse, but there probably should be a new bug filed on making the behaviour a little less strange.
No longer depends on: 318931
Whiteboard: [good first bug]
(In reply to comment #0) > In 0.8.x, no window came up, but in 1.0.1RC, a window appears with no > information. We should be showing information there. Now bug 521526. (In reply to comment #16) > Smokey pointed out on IRC that there are some other weird issues with selection > memory in the bookmark manager vis-a-vis the Info window. This patch at least > doesn't make those issues any worse, but there probably should be a new bug > filed on making the behaviour a little less strange. Now bug 521528.
Comment on attachment 405609 [details] [diff] [review] fix v1.0 sr=smorgan
Attachment #405609 - Flags: superreview?(stuart.morgan+bugzilla) → superreview+
Landed on cvs trunk and CAMINO_2_0_BRANCH.
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Whiteboard: [good first bug] → [camino-2.0][good first bug]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: