Bug 335979 - Disable Get Info/Bookmark Info menu item when History is displayed (Get Info on history item displays no info). Patch by Chris Lawson <cl-bugs-new@chrislawson.net>, r=me, sr=smorgan